--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
 p{
     color: blue;
 }
+body{
+    background-image: url("./Images/program.jpeg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
